# itcube-smart-schedule

./: .env.example  README.md  pyproject.toml
core/: manage.py
core/core/: settings.py
core/telegram_bot/: admin.py  apps.py  bot.py  loader.py  models.py
core/telegram_bot/eduutils/: edu_utils_db.py  student_db.py
core/telegram_bot/filters/: filter.py
core/telegram_bot/handlers/: authenticationgateway.py  student_handler.py  teacher_handler.py
core/telegram_bot/keyboards/: authentication_keyboard.py  set_menu.py  student_keyboard.py  teacher_keyboard.py  teacher_message_state_keyboard.py
core/telegram_bot/lexicon/: authentication.py  commands.py
core/telegram_bot/migrations/: 0001_initial.py  0002_remove_student_if_fourteen_alter_student_full_name_and_more.py  0003_teacher_alter_studentcontentdetails_date_birth_and_more.py  0004_subject_alter_teacher_full_name_alter_teacher_login_and_more.py  0005_studentgroup.py  0006_alter_studentgroup_options_studentgroup_students.py  0007_classroom.py  0008_alter_classroom_options.py  0009_studentgroup_teacher.py  0010_schedule.py  0011_alter_schedule_options.py  0012_student_is_authentication_teacher_is_authentication.py  0013_alter_student_login.py  0014_alter_student_login.py  0015_alter_student_login_and_more.py  0016_alter_studentcontentdetails_name_education_organization_and_more.py  0017_alter_studentcontentdetails_certificate_number_and_more.py  0018_alter_studentcontentdetails_date_birth_and_more.py
core/telegram_bot/states/: authentication_state.py  teacher_message_state.py
(+4 files in other folders)
