[tool.poetry]
name = "itcube-smart-schedule"
version = "0.1.0"
description = ""
authors = ["Yaroslav <103318612+YaSoRoP@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
environs = "^11.0.0"
aiogram = "^3.4.1"
apscheduler = "^3.10.4"
ruff = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"